# microbit-mcp

./: .gitignore  README.md  flash.py  main.py  pyproject.toml  server.py
src/examples/: README.md
src/examples/basic/: main.py
src/mcp_server/: __init__.py  microbit_client.py  protocol.py  server.py
src/mcp_server/tools/: __init__.py  display.py  input.py  music.py  sensors.py
src/microbit/: README.md  main.py
